towers still broken dang it

--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -30,25 +30,25 @@ body {
 
 [data-block="25"] {
   width: 25px;
-  background-color: blue;
+  background-color: rgb(0, 157, 255);
   /* border: 3px solid blue; */
 }
 
 [data-block="50"] {
   width: 50px;
-  background-color: green;
+  background-color: rgb(108, 179, 21);
   /* border: 3px solid green; */
 }
 
 [data-block="75"] {
   width: 75px;
-  background-color: red;
+  background-color: rgb(255, 139, 139);
   /* border: 3px solid red; */
 }
 
 [data-block="100"] {
   width: 100px;
-  background-color: yellow;
+  background-color: rgb(255, 255, 103);
   /* border: 3px solid yellow; */
 }
 
