--- a/09week/customer-satisfaction/css/style.css
+++ b/09week/customer-satisfaction/css/style.css
@@ -28,8 +28,8 @@ form {
   margin: 0 auto;
 }
 
-input {
-  box-shadow: inset 0px 0px 10px -2px rgba(0, 0, 0, 0.25);
+.text-box {
+  box-shadow: inset 0px 0px 10px -2px rgba(0, 0, 0, 0.35);
   padding: 1rem 1rem 1rem 0.5rem;
   margin: 0.2rem 0 1rem 0;
 }
