made changes to landing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* You can style your links page here */ 
 
-h1.top {
+.top {
 
 	text-transform: uppercase;
 	text-align: center;
@@ -13,21 +13,22 @@ h1.top {
 
 }
 
-h2.projectheader {
-	margin-left: 150px;
+.projectheader {
+	margin-left: 50px;
 }
 
 section > a {
-	margin-left: 60px;
+	margin-left: 8px;
 	font-size: 20px;
 }
+
 .navbar-light {
 	width: 700px;
 	
 }
 
 h3 {
-	margin-left: 60px;
+	margin-left: 5px;
 }
 
 body {
@@ -47,7 +48,7 @@ img {
 }
 
 
-div.position {
+.position {
 	position: relative;
 	width:950px;
 	left: 100px;
