--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -1,38 +1,72 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-image: linear-gradient(to left, #bdbbbe 0%, #9d9ea3 100%),
+    radial-gradient(
+      88% 271%,
+      rgba(255, 255, 255, 0.25) 0%,
+      rgba(254, 254, 254, 0.25) 1%,
+      rgba(0, 0, 0, 0.25) 100%
+    ),
+    radial-gradient(
+      50% 100%,
+      rgba(255, 255, 255, 0.3) 0%,
+      rgba(0, 0, 0, 0.3) 100%
+    );
+  background-blend-mode: normal, lighten, soft-light;
+  font-family: "Raleway", sans-serif;
+  overflow: hidden;
+  margin: 0;
+}
+main {
+  margin: 0 auto;
+  margin-inline-end: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
 [data-stack] {
   display: flex;
+  /* flex-direction: column; */
   justify-content: flex-start;
   align-items: center;
-  height: 101px;
-  background-color: aliceblue;
-  margin: 25px;
+  height: 102px;
+  width: 35%;
+  background-color: #e0e0e0;
+  margin: 25px auto;
+  border-radius: 5px;
+  box-shadow: 0px 3px 15px -3px rgba(0, 0, 0, 0.55);
 }
-
 [data-block] {
   width: 25px;
-  float: left;
+  border-radius: 6px;
+  margin-top: -3px;
+  box-shadow: 0px 2px 0px #d0d0d0, 0px 3px 5px rgba(0, 0, 0, 0.4),
+    inset 0px 0px 0px rgba(50, 50, 50, 0.3),
+    inset 0px 0px 3px rgba(50, 50, 50, 0.5);
 }
-
 [data-block="25"] {
   height: 25px;
-  background-color: blue;
+  background-color: #0077c0;
 }
-
 [data-block="50"] {
   height: 50px;
-  background-color: green;
+  background-color: #0eac51;
 }
-
 [data-block="75"] {
   height: 75px;
-  background-color: red;
+  background-color: #e74c3c;
 }
-
 [data-block="100"] {
   height: 100px;
-  background-color: yellow;
+  background-color: #f9bf3b;
 }
-
 #announce-game-won {
+  color: white;
   font-size: 50px;
   text-align: center;
+  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
+    0px 18px 23px rgba(0, 0, 0, 0.1);
 }
