--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,23 @@
+nav{
+    
+margin: 20px;
+padding: 10px;
+box-sizing: border-box;
+float: right;
 
+}
+.img{
+    width: 150px;
+}
+li{
+list-style-type: none;
+display: inline-block;
+
+}
+li:hover{
+
+
+}
+li:nth-child(2){
+color: aqua;
+}
