pictures and text uploaded

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,23 +1,44 @@
 nav{
-    
-margin: 20px;
-padding: 10px;
-box-sizing: border-box;
-float: right;
+    margin: 20px;
+    padding: 10px;
+    box-sizing: border-box;
+    float: right;
+    display: inline-block;
 
 }
 .img{
     width: 150px;
 }
-li{
-list-style-type: none;
-display: inline-block;
+.img03{
+    float: left;
+}
+.img02, .img03, .img04{
+    width:170px;
+    float:right;
+}
+
+div{
 
 }
-li:hover{
-
+button{
+    font-family: delius swash caps;
+    list-style-type: none;
+    display: inline-block;
+    color:rgb(202, 101, 123);
+    border: none;
+    font-size: 30px;
+    background-color: transparent;
+    cursor: pointer;
+}
+button:hover{
+    color: #1A938A;
+    text-decoration: underline;
 
 }
-li:nth-child(2){
-color: aqua;
+body{
+    background-image: url(https://www.xmple.com/wallpaper/white-yellow-gradient-linear-5120x2880-c2-fff0f5-ffdab9-a-75-f-14.svg);
+    background-size: cover;
+}
+p:nth-child(evens){
+    clear: left;
 }
