removed unnecessary code

--- a/checkpoint3/css/style.css
+++ b/checkpoint3/css/style.css
@@ -24,7 +24,7 @@ main {
 .container-inner {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   width: 75%;
   height: 100%;
@@ -50,15 +50,6 @@ main {
 
 #counter-1 {
   background-color: #e74c3c;
-}
-#counter-10 {
-  background-color: #0077c0;
-}
-#counter-100 {
-  background-color: #0eac51;
-}
-#counter-all {
-  background-color: #f1892d;
 }
 #reset {
   background-color: #707070;
