--- a/09week/customer-satisfaction/css/style.css
+++ b/09week/customer-satisfaction/css/style.css
@@ -2,15 +2,16 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   align-content: center;
   border: 2px red solid;
-}
+} */
 
 /* #form {
   display: flex;
@@ -20,3 +21,67 @@ body {
   border: red 1px solid;
 
 } */
+
+.container {
+  color: #a3ffe3;  
+  font-size: 1.5em;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: lighter;
+  background-color: #25262769;
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+
+  align-items: center;
+}
+
+.box {
+  width: 500px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.clicky {
+  width: 400px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  width: 100px;
+  margin: 10px;
+}
+
+input {
+  width: 100px;
+}
+
+.clickbox {
+  width: 500px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.selectone {
+  width: 150px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.reason {
+  width: 150px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.label {
+  ;
+}
