--- a/checkpoint3/css/style.css
+++ b/checkpoint3/css/style.css
@@ -8,38 +8,26 @@ body {
   text-align: center;
   font-size: 2rem;
   background: #485563;
-  background: -webkit-linear-gradient(
-    to right,
-    #29323c,
-    #485563
-  );
-  background: linear-gradient(
-    to right,
-    #29323c,
-    #485563
-  );
+  background: -webkit-linear-gradient(to right, #29323c, #485563);
+  background: linear-gradient(to right, #29323c, #485563);
 }
-
 main {
   width: 100vw;
   height: 100vh;
 }
-
 .container-main {
   width: 100%;
   height: 100%;
 }
-
 .container-inner {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 75%;
+  width: 25%;
   height: 100%;
   margin: 0 auto;
 }
-
 .button {
   height: 100px;
   width: 100px;
@@ -56,11 +44,66 @@ main {
 .button:hover {
   border: 2px solid #e7e5df;
 }
-
+#anvil {
+  transition: 100ms ease-in-out;
+}
+#anvil.shake {
+  animation: shake 0.1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
+#hammer {
+  margin: 0 -40px -116px 0;
+  align-self: flex-end;
+  transition: 100ms ease-in-out;
+}
+#hammer.swing {
+  animation: swingUp 1000ms;
+}
+#hammer.swing.down {
+  animation: swingDown forwards 100ms;
+}
 #counter {
   color: #e7e5df;
   font-size: 3rem;
 }
 #reset {
   background-color: #707070;
+}
+
+/* ANVIL HIT ANIMATION */
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(0, -1px, 0);
+  }
+  20%,
+  80% {
+    transform: translate3d(0, 2px, 0);
+  }
+  30%,
+  50%,
+  70% {
+    transform: translate3d(0, -4px 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(0, 4px, 0);
+  }
+}
+/* HAMMER SWING ANIMATIONS */
+@keyframes swingDown {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-90deg);
+  }
+}
+@keyframes swingUp {
+  0% {
+    transform: rotate(-90deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
