--- a/checkpoint3/css/style.css
+++ b/checkpoint3/css/style.css
@@ -47,14 +47,13 @@ main {
   top: 20px;
 }
 .spark.animate {
-  animation: spark .1s;
+  animation: spark 0.1s;
 }
 .spark.one {
   left: 170px;
 }
 .spark.two {
   left: 150px;
-  
 }
 .spark.three {
   left: 130px;
@@ -137,9 +136,8 @@ main {
     opacity: 1;
   }
   100% {
-    opacity: .25;
+    opacity: 0.25;
     transform: translate(-40px, -20px) rotate(-65deg);
     filter: blur(1px);
   }
-  
 }
