--- a/checkpoint-3/style.css
+++ b/checkpoint-3/style.css
@@ -1,15 +1,68 @@
-.container {
-  color: #a3ffe3;  
-  font-size: 1.5em;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: lighter;
-  background-color: #25262769;
-  grid-area: greybox;
+body {
+  background-image: url(https://github.com/konarie1990/web-workbook/blob/gh-pages/portfolio/img/astronomy-constellation-dark-998641.jpg?raw=true);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  color: white;
   display: flex;
   flex-direction: column;
-  transition: ease-in-out .5s;
+  align-items: center;
+  overflow: hidden;
 }
 
-p {
-  border: 5px red solid;
+#screen {
+
+  cursor: crosshair;
+  border: 1px rgba(255, 0, 0, 0.276) solid;
+  margin-top: 100px;
+  width: 125px;
+  height: 125px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-areas: 
+    "box box box box box"
+    "box box box box box"
+    "box box box box box"
+    "box box box box box"
+    "box box box box box";
 }
+
+#screen:active {
+  border: 1px red solid;
+}
+
+.box {
+  width: 25px;
+  height: 25px;
+
+  /* border: rgba(255, 0, 0, 0.317) solid 2px; */
+}
+
+
+.box:active {
+  border: 25px dotted red;
+  border-radius: 500px;
+  background-color: rgba(255, 0, 0, 0.728);
+  transform: scale(80, 80) rotate(2160deg);
+  transition: all .2s ease-out;
+}
+
+.box:hover {
+  background-color: rgba(255, 0, 0, 0);
+  transition: .4s ease-in;
+
+}
+
+#counterDisplay {
+  height: 50px;
+  width: 200px;
+  margin-top: 50px;
+  border: green 5px solid;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
