--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -1,11 +1,22 @@
-
-
 body {
-    color: red;
+    color: blue; font-family: Arial, Helvetica, sans-serif
 
 }
 
-.box-01 {
+h1{ 
+    color: black
+
+}
+h2 {
+    color: blueviolet;
     border: 2px solid black;
-    width: 200px; 
+    padding: 10px;
+    margin: 5px;
+}
+
+img {height: 50%;
+}
+
+ul {
+    color: black;
 }
