--- a/checkpoint-one/style.css
+++ b/checkpoint-one/style.css
@@ -3,36 +3,34 @@
     src: url("Fonts/Walkway.ttf");
 }
 
-a:link    {color:white; background-color:transparent; text-decoration:none}
-a:visited {color:White; background-color:transparent; text-decoration:none}
+a  {color:white; background-color:transparent; text-decoration:none}
+
 
 /*--------------------Body-------------------*/
 body{
-    margin:0;
+   margin:0;   /* zeros border around banners */
 }
 /*--------------------Header-------------------*/
 header{
-    width:100%;
-    top:0;
-    position:absolute;
+    position:absolute;  /*Allows logo to be on top of banner*/
 }
 
 header div:nth-of-type(1){ /*header menu*/
-    position: sticky;
-    right:20px;
-    float:right;
-    margin-top:15px;
-    margin-right:50px;
+    position:fixed;
+    right:30px;
+    background-color:rgba(124, 102, 102, 0.336);
+    border:1px solid black;
+    border-radius: 3px;
 }
 
 h2{ /*Menu text*/
-    font-size:30px;
+    font-family: raleway;
+    font-size:25px;
     padding:5px;
-    margin-left:20px;
-    float:left;
+    margin:0;
+    height:40px;
     border:1px solid rgba(0, 0, 0, 0);  /*Gives an invisible border to prevent resizing on hover*/
     -webkit-transition: background-color 0.5s ease-in-out;
-    border-radius: 3px;
 }
 
 h2:hover{
@@ -41,42 +39,35 @@ h2:hover{
 }
 /*--------------------Urban Grown Logo-------------------*/
 img.logo{
-    height:140px;
-    width:25%;
+    width:475px;
     margin-top:10px;
     margin-left:20px;
 }
 /*--------------------Home banner-------------------*/
-#imagebanner{
-    padding-top:100px;
+.imagebanner{
+    padding-top:100px;  /*without this the banner has 100px of whitespace.*/
     background-image: url("images/hydro1.jpg");
     height:500px;
-    background-repeat: no-repeat;
     background-size:100%;
     border-bottom:80px solid rgb(56, 41, 41);
-
 }
-#imagebanner >h3{
+.imagebanner >h3{
     font-size:80px;
     margin-top:150px;
     margin-left: 620px;
     color:white;
-  
 }
 /*-----------------Mission----------------------*/
 #mission{
     height:500px;
 }
-
 #mission >p {
     text-align:center;
     float:left;
     width:30%;
+    margin-top:0;
     margin-left:300px;
-   
     padding:20px;
-    border-radius:5px;
-    
 }
 #mission >img {
     width:35%;
@@ -90,29 +81,42 @@ img.logo{
     margin-left:24%;
 }
 /*----------------------products-------------------------*/
+/*positioning needs to be absolute in order for everything to stack correctly*/
+
 #product >h3 {
     position: absolute;
-    margin-left:1050px;
+    left:1050px;
     margin-top:150px;
 }
-
 #product >p {
-    font-size:30px;
     width:500px;
     background-color:white;
     position: absolute;
-    margin-left:1050px;
+    left:1050px;
     margin-top:250px;
 }
-
+#product > a> h4 {
+    text-align:center;
+    position: absolute;
+    background-color:#EE415A;
+    width:100px;
+    padding:10px;
+    border: 1px solid black;
+    border-radius: 4px;
+    margin-left:1050px;
+    margin-top:520px;
+}
+#product >a >h4:hover{
+    background-color:#DF6372;
+}
 img.product{
     width:35%;
     height:620px;
-    border-radius:4px;
     margin-left:15%;
     margin-top:20px;
 }
 /*---------------------Customers-------------------------*/
+
 #customers{
 margin-top:50px;
 }
@@ -122,18 +126,17 @@ width: 16%;
 margin: 0 auto;
 margin-bottom:40px;
 }
-
+/*Needs separete definitions because .imagebanner allows objects to exist on top*/
 #customers >img{
 height:600px;
 width:100%;
 }
 /*--------------------Contact---------------------------*/
-#contact{
 
-}
 #contact >h3 {
     margin:0 auto;
-    width:12%;
+    width:15.5%;
+    border-bottom:1px solid #EE415A;
 }
 form{
     margin-top:30px;
@@ -141,33 +144,33 @@ form{
     margin-bottom:20px;
     width:40%;
 }
-
 [type =text]{
-    width:42%;
+    text-align:center;
+    width:40%;
     height:20px;
-    margin-left:4.5%;
+    margin-left:6.4%;
 }
-
 #message{
     display:block;
-    margin-left:30%;
-    width:39.5%;
+    margin: 0 auto;
+    width:40%;
     height:300px;
+    resize:none;
 }
-
 
 /*---------------Footer---------------------------*/
 footer{
     margin-top:100px;
+    margin-left:780px;
+    margin-bottom:20px;
 }
-
 img.social{
     margin-top:70px;
     margin-right:20px;
     height:100px;
     width:100px;
 }
-/*-------------------Universal------------------------*/
+/*-------------------Universal (All pages use these)------------------------*/
 
 p {
     font-size:30px;
@@ -179,6 +182,77 @@ h3{
     font-size:60px;
 }
 
-#wrapper{
+h4{
+    font-family: raleway;
+    font-size:25px;
+    text-align: center;
+    margin-bottom:5px;
+}
+
+.wrapper{
     width:1900px;
+}
+a> h4{
+    text-align:center;
+    font-family:raleway;
+    font-size:25px;
+    background-color:#EE415A;
+    width:20%;
+    padding:10px;
+    border: 1px solid black;
+    border-radius: 4px;
+    color:white;
+    margin: 0 auto;
+    margin-top:20px;
+}
+a>h4:hover{
+    background-color:#DF6372;
+}
+
+/*-------------Products page specific-------------*/
+#productbanner >h3{
+    width:20%;
+    margin:0 auto;
+    margin-top:150px;
+    font-size:90px;
+}
+main{
+    width:80%;
+    margin-left:20%;
+}
+.productwrap{
+    border:1px solid white;
+    width:20%;
+    float:left;
+    -webkit-transition: border 0.2s ease-in-out;
+}
+.productwrap >img{
+    width:100%;
+    height:250px;
+}
+.productwrap:hover{
+border: 1px solid black;
+}
+#productfooter{ /*This breaks if it isn't absolute*/
+    top:2500px;
+    position: absolute;
+    margin-bottom:20px;
+}
+#productbanner{ /*Just changes the banner image*/
+    background-image: url("images/productsbanner.jpg")
+}
+
+
+/*----------partner page specific-------------*/
+#partnerbanner{
+    background-image: url("images/partnerbanner.png")
+}
+#partner> #partnerstatement >p {
+width: 40%;
+margin:0 auto;
+text-align: center;
+}
+#partner> #partnerstatement > h3{
+width:10%;
+margin:10px auto;
 }
