idea has been fleshed out

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -1,1 +1,24 @@
+body{
+    margin: 0;
+    padding: 0;
+    font-family: 'Gloria Hallelujah', cursive;
+}
+/* --- Header Container and Children --- */
+.headerContainer{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 15vh;
+    width: 100%;
+    background-color: aqua;
+}
 
+/* --- Main Container and Children --- */
+.mainGameContainer{
+    position: absolute;
+    top: 15vh;
+    left: 0;
+    height: 85vh;
+    width: 100%;
+    background-color: blueviolet;
+}
