Additions to bio page

--- a/lynn-portfolio/portfoliostyle.css
+++ b/lynn-portfolio/portfoliostyle.css
@@ -1,8 +1,19 @@
+h2 {
+  margin-top: 90px;
+  Color: black;
+  text-transform: uppercase;
+  text-shadow: 3px 3px white;
+}
+a {
+  color: black;
+}
 .box1 {
     grid-area: box1;
     background-color: #eeeeee;
     margin: 10px;
     color: black;
+    text-align: center;
+    background-color: lightcyan;
   }
   
   .box2 {
@@ -10,6 +21,7 @@
     background-color: #eeeeee;
     margin: 10px;
     color: black;
+    text-align: center;
   }
   
   .box3 {
@@ -17,13 +29,16 @@
     background-color: #eeeeee;
     margin: 10px;
     color: black;
+    text-align: center;
   }
   
   .box4 {
     grid-area: box4;
     background-color: #eeeeee;
     margin: 10px;
-    color: black;
+    text-align: center;
+    background-image: url(./Opaque-RM-background-image.png);
+    background-size: cover;
   }
 
   /* Large and up (Desktops) */
@@ -39,4 +54,11 @@
         background: white;
         padding: 10px;
       }
+    }
+
+    a:hover {
+      color: teal;
+    }
+    h2:hover {
+      color: grey;
     }
