--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -69,7 +69,7 @@ main {
   background-image: url("../img/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
