adjusted some sizes and positioning on resume

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -1,24 +1,29 @@
 body {
   height: 100vh;
-  width: 100vw;
+  width: 90vw;
   font-size: 20px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  background: #95a5a6;
+  padding: 30px;
+  text-align: center;
 } 
 
 li {
   list-style-type: none;
   padding: 10px;
+  text-align: center;
 }
 
 p {
   padding: 10px;
+  text-align: center;
 }
 
 header {
   background-color: teal; 
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-around ;
   font-size: 50px;
   font-weight: bold;
   color: black;
@@ -28,11 +33,16 @@ header {
 }
 
 main {
+  width: 50vw;
+  height: 300px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  justify-content: flex-start;
+  align-content: center;
+  align-items: center;
   border: 1px solid black;
   padding: 20px;
+  text-align: center;
   
 }
 
@@ -43,6 +53,7 @@ section {
   align-items: flex-start;
   padding: 20px;
   border: 1px solid black;
+  text-align: center;
 
 }
 
