working on layout and intering data

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,6 +1,24 @@
-
-h1 {
-    color: red;
-    justify-content: center;
+body {
+    background-color: #9BE5F3;
 }
 
+.topnav {
+    margin: 0 auto;
+    list-style-type: none;
+    float: right;
+    font-family: questrial;
+    padding: 20px;
+}
+
+.topnav > a {
+    text-decoration: none;
+    padding: 20px;
+}
+
+hr {
+    color: #1850A5;
+}
+
+main {
+    display: flex;
+}
