Finished portfolio page. Needs input. If time, needs fixes to resume

--- a/lynn-portfolio/portfoliostyle.css
+++ b/lynn-portfolio/portfoliostyle.css
@@ -13,7 +13,9 @@ a {
     margin: 10px;
     color: black;
     text-align: center;
-    background-color: lightcyan;
+    background-image: url(./opaque-magazine-cover.png);
+    background-size: cover;
+
   }
   
   .box2 {
@@ -22,6 +24,8 @@ a {
     margin: 10px;
     color: black;
     text-align: center;
+    background-image: url(./GIT-40-PM.png);
+    background-size: cover;
   }
   
   .box3 {
@@ -30,6 +34,8 @@ a {
     margin: 10px;
     color: black;
     text-align: center;
+    background-image: url(./opacity-KUT.png);
+    background-size: cover;
   }
   
   .box4 {
