--- a/lynn-portfolio/style.css
+++ b/lynn-portfolio/style.css
@@ -3,7 +3,7 @@
 }
 header {
   padding: 25px;
-  color: whitesmoke
+  color: whitesmoke;
 }
 body.resume {
   background-color: gray;  
@@ -12,8 +12,8 @@ body.resume {
   font-size: 14pt;  
 }
 body {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   font-size: 14pt;
 }
 .portfoliocontainer {
@@ -33,7 +33,7 @@ a {
   justify-content: flex-end;
   color: white;
   font-size: 18pt;
-  background-color: black;
+  background-color: white;
 }
 .navwhitebkgrnd {
   display: flex;
@@ -111,7 +111,7 @@ hr.whitefade {
     padding: 15px;
     margin-top: 20%;
     Margin-bottom: 25%;
-    background-color: black;
+    background-color: white;
   }
 
   div.child {
@@ -131,8 +131,8 @@ footer {
 }
    
  .nav a:hover { 
-  color: white;
+  color: gray;
 }
 div.homepage:hover {
-  background-color:rgba(255, 255, 255, 0.25);
+  background-color:lightgray;
 }
