--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -6,18 +6,42 @@ nav{
     display: inline-block;
 
 }
-.img{
-    width: 150px;
+h1{
+    text-align: center;
+    margin-left: 430px;
 }
+h3{
+    font-family: delius swash caps;
+}
+/*resizing logo picture*/
+.img{
+ width: 150px;
+}
+/*Content pictures*/
 .img03{
+    float:right;
+    clear: right;
+    display: inline-block;
+}
+.img02, .img04{
     float: left;
+    clear: left;
+    padding: 10px;
 }
 .img02, .img03, .img04{
-    width:170px;
-    float:right;
+width:170px;
 }
-
-div{
+.content{
+    background-color: aliceblue;
+    position: relative;
+    box-sizing: border-box;
+    width: 50%;
+    height: 1000px;
+    padding: 5%;
+    border-radius: 10px;
+    border: 3px dotted black;
+    margin: auto;
+    
 
 }
 button{
@@ -38,7 +62,19 @@ button:hover{
 body{
     background-image: url(https://www.xmple.com/wallpaper/white-yellow-gradient-linear-5120x2880-c2-fff0f5-ffdab9-a-75-f-14.svg);
     background-size: cover;
+    background-position: 100%
 }
-p:nth-child(evens){
-    clear: left;
+div{
+box-sizing: border-box;
+margin: auto;
+height: 225px;
+}
+footer{
+    position: relative;
+    box-sizing: border-box;
+    margin: 5px 25%;
+    padding: 10px;
+    height: 50px;
+    border: 2px;
+    background-color: aliceblue;
 }
