header shell completed

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -215,7 +215,7 @@ body{
     margin-top: 13%;
     text-align: center;
 }
-
+/* -- Alert cover effects--*/
 #informationAlerts:hover{
     border: 1px solid red;
     color: red;
