all content added. working on page design.

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -21,4 +21,51 @@ hr {
 
 main {
     display: flex;
+    padding: 20px;
+}
+
+.content {
+    font-family: questrial;
+    margin-top: 100px;
+    margin-left: 100px;
+}
+
+.grab {
+    font-size: 75px;
+    color: #1850A5;
+    
+}
+
+.row3 {
+    width: 100%;
+    padding: 20px;
+}
+
+#phone-number {
+    width: 45%;
+    padding: 15px;
+    border-radius: 12px;
+    font-size: 13px;
+}
+
+button {
+    padding: 20px;
+    border-radius: 30px;
+    color: white;
+    background-color: #1850A5;
+    font-family: questrial;
+}
+
+.main-image {
+    margin-top: 100px;
+}
+
+footer {
+    display: flex;
+    padding: 20px;
+    background-color: white;
+}
+
+.driver {
+    list-style-type: none;
 }
