working on design

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -64,8 +64,11 @@ footer {
     display: flex;
     padding: 20px;
     background-color: white;
+    font-family: questrial;
 }
 
+
 .driver {
-    list-style-type: none;
+
+    
 }
