lazer sound working

--- a/checkpoint-3/style.css
+++ b/checkpoint-3/style.css
@@ -15,7 +15,7 @@ body {
   background-size: 125px 125px;
   background-position: center;
   cursor: crosshair;
-  border: 3px rgba(86, 222, 41, 0.536) dashed;
+  border: 3px rgba(74, 255, 14, 0.536) dashed;
   margin-top: 100px;
   width: 125px;
   height: 125px;
@@ -41,6 +41,7 @@ body {
 .box {
   width: 25px;
   height: 25px;
+
 }
 
 
@@ -62,11 +63,11 @@ body {
 #points {
   font-family: 'Press Start 2P', cursive;
   font-size: 30px;
-  color: rgba(29, 167, 29, 0.619);
+  color: rgba(0, 255, 0, 0.509);
   height: 50px;
   width: 200px;
   margin-top: 50px;
-  border: rgba(29, 182, 29, 0.523) 5px dashed;
+  border: rgba(10, 255, 10, 0.523) 5px double;
   text-align: center;
   display: flex;
   flex-direction: column;
