html was giving lint error based on class value (added dash 1)

--- a/checkpoint-3/style.css
+++ b/checkpoint-3/style.css
@@ -10,7 +10,7 @@ body {
   overflow: hidden;
 }
 
-#screen {
+#screen-1 {
   background-image: url(https://orig00.deviantart.net/9fb5/f/2015/289/a/1/space_invader_gif_by_ivanrussiansky-d9dccma.gif);
   background-size: 125px 125px;
   background-position: center;
@@ -31,7 +31,7 @@ body {
     "box box box box box";
 }
 
-#screen:active {
+#screen-1:active {
   border: 4px rgba(41, 255, 48, 0.694) dashed;
   background-size: 150px 150px;
   transform: scale(200, 80);
