--- a/checkpoint-3/css/style.css
+++ b/checkpoint-3/css/style.css
@@ -13,6 +13,7 @@ body {
  }
  .button-div {
      display:flex;
+     flex-direction: column;
      justify-content: center;
      align-items: center;
      border: 1px black solid;
