changed up some HTML and edited h2 CSS

--- a/02week/blog/css/style.css
+++ b/02week/blog/css/style.css
@@ -28,6 +28,9 @@ h1{
 h2 {
     margin: 2px auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+    font-weight: 900;
+    margin-bottom: 4px;
 }
 
 .postdate {
