--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,7 +1,13 @@
 body {
     background-color: #9BE5F3;
+    flex-wrap: wrap;
+    flex-grow: 1;
 }
 
+.header {
+    border-bottom: 1px solid #1850A5;
+    margin: 0px 80px;
+}
 .topnav {
     margin: 0 auto;
     list-style-type: none;
@@ -13,10 +19,6 @@ body {
 .topnav > a {
     text-decoration: none;
     padding: 20px;
-}
-
-hr {
-    color: #1850A5;
 }
 
 main {
@@ -33,12 +35,14 @@ main {
 .grab {
     font-size: 75px;
     color: #1850A5;
+    margin-left: 20px;
     
 }
 
 .row3 {
     width: 100%;
     padding: 20px;
+    font-family: questrial;
 }
 
 #phone-number {
@@ -50,21 +54,26 @@ main {
 
 button {
     padding: 20px;
+    width: 40%;
     border-radius: 30px;
     color: white;
     background-color: #1850A5;
     font-family: questrial;
+    margin: 0px 20px;
+    font-size: 16px;
 }
 
 .main-image {
     margin-top: 100px;
 }
 
-footer {
+.footer {
     display: flex;
-    padding: 20px;
+    padding-left: 200px;
     background-color: white;
     font-family: questrial;
+    align-items: space-between;
+    margin: 0 auto;
 }
 
 
