--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -232,6 +232,54 @@ body{
     cursor: pointer;
 }
 
+#fullInventory{
+    /* display: none; */
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    top: 0;
+    left: 2.5vw;
+    height: 95vh;
+    width:95vw;
+    border: 2px solid rgb(255, 0, 0);
+    background-image: linear-gradient(rgba(13, 29, 63, 1), rgba(255, 255, 255, 0));
+    box-shadow: 5px 5px 10px black;
+}
+
+.fullInventoryItems{
+    width:50%;
+    height: 100%;
+    border-right: 2px solid black;
+    display: flex;
+    flex-direction: column;
+}
+
+.fullInventorySpecial{
+    width:25%;
+    height: 100%;
+    border-right: 2px solid black;
+    display: flex;
+    flex-direction: column;
+}
+
+.fullInventoryBoat{
+    width:25%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.fullInventoryTitle{
+    width: 100%;
+    height: 15vh;
+    border-bottom: 1px solid black;
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    font-weight: bolder;
+    color: white;
+}
 
 /* --- Main Container and Children --- */
 .mainGameContainer{
@@ -241,6 +289,6 @@ body{
     height: 85vh;
     width: 100%;
     border-top: 2px solid black;
-    background-image: linear-gradient(rgb(108, 141, 248), rgba(0,0,0,0));;
+    background-image: linear-gradient(rgb(108, 141, 248), rgba(0, 0, 0, 0));
 }
 /**/
