created timer styled the font

--- a/checkpoint-3/css/style.css
+++ b/checkpoint-3/css/style.css
@@ -1,12 +1,13 @@
 body {
+    background-color: rgb(179, 117, 238);
     display:flex;
     justify-content: center;
 
 }
 
  button {
-     height: 100px;
-     width: 100px;
+     height: 440px;
+     width: 430px;
      background-color: blueviolet;
      border-radius: 50%;
      border: 2px black solid;
@@ -17,8 +18,8 @@ body {
      justify-content: center;
      align-items: center;
      border: 1px black solid;
-     height: 200px;
-     width: 200px;
+     height:650px;
+     width: 600px;
  }
  div {
      border: 3px orange solid;
@@ -29,3 +30,11 @@ body {
      align-items: center;
      
  }
+ p {
+    font-family: 'Indie Flower', cursive;
+    font-size: 40px;
+    color: white;
+ }
+span {
+    color: white;
+}
