fixed the timer took out the text click me in the button

--- a/checkpoint-3/css/style.css
+++ b/checkpoint-3/css/style.css
@@ -17,12 +17,10 @@ body {
      flex-direction: column;
      justify-content: center;
      align-items: center;
-     border: 1px black solid;
      height:650px;
      width: 600px;
  }
  div {
-     border: 3px orange solid;
      height: 100vh;
      width: 100%;
      display: flex;
@@ -37,4 +35,7 @@ body {
  }
 span {
     color: white;
+    font-family: 'Indie Flower', cursive;
+    font-size:30px;
+
 }
