--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -7,6 +7,7 @@ body {
 .header {
     border-bottom: 1px solid #1850A5;
     margin: 0px 80px;
+  
 }
 .topnav {
     margin: 0 auto;
@@ -46,11 +47,13 @@ main {
 }
 
 #phone-number {
-    width: 45%;
-    padding: 15px;
+    width: 40%;
+    padding: 18px;
     border-radius: 12px;
     font-size: 13px;
 }
+
+
 
 button {
     padding: 20px;
@@ -67,17 +70,61 @@ button {
     margin-top: 100px;
 }
 
-.footer {
+.info {
     display: flex;
-    padding-left: 200px;
+    padding-left: 100px;
     background-color: white;
     font-family: questrial;
-    align-items: space-between;
-    margin: 0 auto;
+    justify-content: space-evenly;
+    height: 100%;
+    padding-bottom: 100px;
 }
 
+.list {
+    margin-top: 30px;
+}
 
-.driver {
+.list4 {
+    margin-top: 30px;
+    padding-left: 0;
 
+}
+
+.row4 {
+    justify-content: space-between;
+    justify-content: flex-start;
+}
+
+li {
+    line-height: 2;
+}
+
+h4 {
+    font-weight: bold;
+}
+#h4 {
+    margin-left: 30px;
+    font-weight: bold;
+}
+#apps {
+    padding: 5px 30px;
+    justify-content: flex-start;
+}
+
+.foot {
+    display: flex;
+    justify-content: flex-end;
+    
+    background-color: white;
     
 }
+
+.foot > a {
+    font-family: questrial;
+    text-decoration: none;
+}
+    
+/* #footer-links > a {
+    width: 400px;
+    justify-content: space-evenly;
+} */
