--- a/08week/tic-tac-toe/style.css
+++ b/08week/tic-tac-toe/style.css
@@ -1,18 +1,27 @@
-div[data-cell] {
-  width: 100px;
-  height: 100px;
-  background-color: #f2f2f2;
-  float: left;
-  border: 1px solid #808080;
-  font-size: 100px;
+#board {
+  width: 300px;
+  height: 300px;
+  display: grid;
+	grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+}
+
+[data-cell] {
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  border: 1px solid white;
+  color: white;
+  font-size: 150px;
   text-align: center;
 }
 
-.row {
-  clear: both;
+#announce-winner {
+  position: relative;
+  top: 280px;
+  font-size: 50px;
 }
 
-#announce-winner {
-  clear: both;
-  font-size: 50px;
+#clear {
+  position: relative;
+  top: 300px;
 }
